Refatorando código de estilo do projeto. Exclusão da biblitoeca styled-components para css.

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-VITE_FIREBASE_API_KEY="AIzaSyD1FmzJRuxGeUZbLSWI-sAuNvVgIUY6VHc"
-VITE_FIREBASE_AUTH_DOMAIN="bodegatech-d1e46.firebaseapp.com"
-VITE_FIREBASE_PROJECT_ID="bodegatech-d1e46"
-VITE_FIREBASE_STORAGE_BUCKET="bodegatech-d1e46.appspot.com"
-VITE_FIREBASE_MESSAGING_SENDER_ID="824494659436"
-VITE_FIREBASE_APP_ID="1:824494659436:web:72630caf1e2a05936f4549"
+VITE_FIREBASE_API_KEY="AIzaSyDg8pphkwEoJAuzCVrdJRyg_29lUKUfaM8"
+VITE_FIREBASE_AUTH_DOMAIN="bodegatech-58e49.firebaseapp.com"
+VITE_FIREBASE_PROJECT_ID="bodegatech-58e49"
+VITE_FIREBASE_STORAGE_BUCKET="bodegatech-58e49.appspot.com"
+VITE_FIREBASE_MESSAGING_SENDER_ID="791312526148"
+VITE_FIREBASE_APP_ID="1:791312526148:web:3c23d498a95d7dff678511"    
